fixed z-index issue with mobile dropdown

--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -30,7 +30,7 @@ li {
   margin-left: -40px;
 }
 
-html:focus-within {
+html{
   scroll-behavior: smooth;
 }
 
